both dimensions of world now changeable. size of container div changes depending on the size of world

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -10,13 +10,15 @@
 
 body {
 	background-color: black;
+    color: white;
 }
 
 #container {
-	display: inline-block;
-	width: 500;
-	height: 500;
-	margin: 0 auto;
+/*    overflow: hidden;
+*/	display: inline-block;
+	/*width: 500;*/
+/*	height: 500;
+*/	margin: 0 auto;
 }
 
 /*.cell {
