--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -16,9 +16,9 @@ body {
 #container {
 /*    overflow: hidden;
 */	display: inline-block;
-	/*width: 500;*/
-/*	height: 500;
-*/	margin: 0 auto;
+	width: 100%;
+	height: 95%;
+	margin: 0 auto;
 }
 
 /*.cell {
@@ -34,8 +34,8 @@ body {
 .cell {
     background-color: green;
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 5%;
+    height: 5%;
     top: 20;
     left: 20;
 }
