--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -25,7 +25,7 @@ body {
     background-color:green;
     border: 1px solid black;
     float: left;
-    width: 20px;
+    width: 20px3
     height:20px;
     top: 20;
     left: 20;
@@ -34,7 +34,7 @@ body {
 .cell {
     background-color: green;
     display: inline-block;
-    width: 5%;
+    width: 3%;
     height: 5%;
     top: 20;
     left: 20;
