--- a/views/index.erb
+++ b/views/index.erb
@@ -10,8 +10,8 @@
 
   	<a href="/start" style="position: absolute"><h4>Home</h4></a>
     <br>
-  	<h4 style="position: absolute">Tick Count: <%=@world.tick_count%></h4>
-
+  	<h4 style="position: absolute; left: 20px; top: 10px">Tick Count: <%=@world.tick_count%></h4>
+    <h1 style="position: absolute; left: 20px; top: 50px"><%=@game_over%><h1>
   	<div id="container">
   	<%@graph.each do |x|%>
   		<br>
