added 'go home' anchor to take you to /start route after game ends

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-  	<a href="/start" style="position: absolute"><h4>Home</h4></a>
+  	<a href="/start" style="position: absolute; right: 20px; top: 10px"><h4>Home</h4></a>
     <br>
   	<h4 style="position: absolute; left: 20px; top: 10px">Tick Count: <%=@world.tick_count%></h4>
     <h1 style="position: absolute; left: 20px; top: 50px"><%=@game_over%><h1>
