changed form label for choosing which cells to come to life

--- a/views/start.erb
+++ b/views/start.erb
@@ -17,7 +17,7 @@
 				<br>
 				<input id="player" type="radio" name="player" value="2">Player 2 (Blue)</input>
 				<br>
-			<label for="graph_point">Pick points on the graph</label>
+			<label for="graph_point">Pick cells on the graph that you would like to have come to life on your team</label>
 				<% i = 0 %>
 				<%@graph.each do |x|%>
 					<br>
