changed @game_over to contain html

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,11 +8,10 @@
   </head>
   <body>
 
-  	<a href="/start" style="position: absolute; right: 20px; top: 10px"><h4>Home</h4></a>
-    <a href="/pause" style="positon: absolute; right: 20px; top: 50px"><h4>Pause</h4></a>
-    <br>
-  	<h4 style="position: absolute; left: 20px; top: 10px">Tick Count: <%=@world.tick_count%></h4>
-    <h1 style="position: absolute; left: 20px; top: 50px"><%=@game_over%><h1>
+  	<a href="/start" style="position: absolute; right: 20px; top: 40px"><h4>Home</h4></a>
+    <a href="/pause" style="position: absolute; right: 20px; top: 70px"><h4>Pause</h4></a>
+  	<h4 style="position: absolute; left: 20px; top: 40px">Tick Count: <%=@world.tick_count%></h4>
+    <%=@game_over%>
   	<div id="container">
   	<%@graph.each do |x|%>
   		<br>
