--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,7 @@
 
-<a href="/"><h1>PRESS HERE TO START!</h1></a>
+<a href="/game/<%=@id%>"><h1>PRESS HERE TO START!</h1></a>
+
+<!-- FOR DEBUGGING -->
+<h1><%=@user_game.id%></h1>	
+
+<a href="/start/<%=@user_game.id%>" target="_blank">Start</a>
