--- a/views/start_existing.erb
+++ b/views/start_existing.erb
@@ -1,8 +1,5 @@
 
 
-
-
-
 <html lang="en">
 	<head>
 		<link href="css/stylesheet.css" type="text/css" rel="stylesheet"/>
@@ -11,18 +8,18 @@
 	<body>
 	<div id="container">
 		<form action="/play" method="POST">
-			<h1>Set up a new game? Your game ID is <%=@id%>. To play with someone else, send them to <a href="/start/<%=@id%>">battle-of-life.herokuapp.com/start/<%=@id%></a></h1>
 			<br>
-			<label for="username">What's your nickname?</label>
+			<h1>You're friend has given you this link to play the Game of Life (multiplayer version) with you! That's right. Get excited.</h1>
+
+			<h3> You're friend chose to play as <%=@existing_player%>. You will play as <%=@new_player%></h3>
+
+			<label for="player">Play as Player 1 (Red) or Player 2 (Blue)</label>
 				<br>
-				<input id="username" type="text" name="username">
+				<input id="player" type="radio" name="player" value="1" <%=disable_radio?(@existing_player, "1")%> >Player 1 (Red)</input> 
 				<br>
-			<label for="player">Play as Player 1 (Red) or Player 2 (Blue)?</label>
+				<input id="player" type="radio" name="player" value="2" <%=disable_radio?(@existing_player, "2")%> >Player 2 (Blue)</input>
 				<br>
-				<input id="player" type="radio" name="player" value="1">Player 1 (Red)</input> 
-				<br>
-				<input id="player" type="radio" name="player" value="2">Player 2 (Blue)</input>
-				<br>
+
 			<label for="graph_point">Pick cells on the graph that you would like to have come to life on your team</label>
 				<% i = 0 %>
 				<%@graph.each do |x|%>
@@ -33,12 +30,9 @@
 					<%end%>
 				<%end%>
 				<br>
-
 			<input type="hidden" name="id" value="<%=@id%>">
 			<input type="submit" value="Submit"></input>
 		<form/>
 		</div>
 	</body>
 </html>
-
-
