fixed cssbug where cells werent showing on play page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <link href="css/stylesheet.css" type="text/css" rel="stylesheet"/>
+    <link href="/css/stylesheet.css" type="text/css" rel="stylesheet"/>
     <title>Game of Life</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <%#= check_pause %>
@@ -28,7 +28,7 @@
     	<%@graph.each do |x|%>
     		<br>
     		<%x.each do |cell|%>
-    			<div class="cell" style="<%=color_cell(cell)%>"></div>
+    			<div class="cell" style="<%=color_cell(cell)%>;"></div>
     		<%end%>
     	<%end%>
     	</div>
@@ -37,4 +37,3 @@
   </body>
 </html>
 
-<!-- style="width: <%=(@world.size_y*20)+250%>; height: <%=(@world.size_x*20)+150%>" -->
