--- a/views/start.erb
+++ b/views/start.erb
@@ -5,7 +5,7 @@
 
 <html lang="en">
 	<head>
-		<link href="css/stylesheet.css" type="text/css" rel="stylesheet"/>
+		<link href="/css/stylesheet.css" type="text/css" rel="stylesheet"/>
 		<title>Game of Life</title>
 	</head>
 	<body>
