--- a/views/start_existing.erb
+++ b/views/start_existing.erb
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<link href="css/stylesheet.css" type="text/css" rel="stylesheet"/>
+		<link href="/css/stylesheet.css" type="text/css" rel="stylesheet"/>
 		<title>Game of Life</title>
 	</head>
 	<body>
