added separate play pages for a game that's already existing. Allow users to pass username to each game.

--- a/views/start_existing.erb
+++ b/views/start_existing.erb
@@ -9,7 +9,7 @@
 	<div id="container">
 		<form action="/play" method="POST">
 			<br>
-			<h1>You're friend has given you this link to play the Game of Life (multiplayer version) with you! That's right. Get excited.</h1>
+			<h1>You're friend <%=@game_creator%> has given you this link to play the Game of Life (multiplayer version) with you! That's right. Get excited.</h1>
 
 			<h3> You're friend chose to play as <%=@existing_player%>. You will play as <%=@new_player%></h3>
 
