--- a/views/play.erb
+++ b/views/play.erb
@@ -1,9 +1,16 @@
 
+<html lang="en">
+	<head>
+		<link href="/css/stylesheet.css" type="text/css" rel="stylesheet"/>
+		<title>Battle of Life</title>
+	</head>
+	<body>
+		<h1>Your game ID is <%=@user_game.id%>. To play with someone else, send them to <a href="/start/<%=@id%>">battle-of-life.herokuapp.com/start/<%=@user_game.id%></a></h1>
 
-<h1>Your game ID is <%=@user_game.id%>. To play with someone else, send them to <a href="/start/<%=@id%>">battle-of-life.herokuapp.com/start/<%=@user_game.id%></a></h1>
-
-<h2>Here we go...</h2>
-<img src="/img/start_page_images/<%=random_gif%>"/>
+		<h2>Here we go...</h2>
+		<img src="/img/start_page_images/<%=random_gif%>"/>
 
 
-<h2>Once they've submitted their cells, <a href="/game/<%=@id%>">PRESS HERE AT THE SAME TIME TO START!</h2></a>
+		<h2>Once they've submitted their cells, <a href="/game/<%=@id%>">PRESS HERE AT THE SAME TIME TO START!</h2></a>
+	</body>
+</html>
