--- a/views/play_existing.erb
+++ b/views/play_existing.erb
@@ -5,5 +5,7 @@
 <h2>Here we go...</h2>
 <img src="/img/start_page_images/<%=random_gif%>"/>
 
-
-<h2>Once <span><%=@user_game.creator%></span> has submitted their cells, <a href="/game/<%=@id%>">PRESS HERE AT THE SAME TIME TO START!</h2></a>
+<h2><span><%=@user_game.creator%></span> has already submitted his/her cells, so you're both ready to rumble.
+<br>
+<br>
+<a href="/game/<%=@id%>">PRESS HERE AT THE SAME TIME AS YOUR OPPONENT TO START!</a></h2> 
