changed tick count to generation on game page

--- a/views/window.erb
+++ b/views/window.erb
@@ -1,5 +1,5 @@
 
-<h4 style="position: absolute; left: 20px; top: 40px">Tick Count: <%=@world.tick_count%></h4>
+<h4 style="position: absolute; left: 20px; top: 40px">Generation: <%=@world.tick_count%></h4>
 <%=@game_over%>
 <div id="container">
 <%@graph.each do |x|%>
